tests/smt2/error/interpolant-info.smt2
(get-info :interpolation-method)
(set-option :produce-interpolants false)
(get-info :interpolation-method)
(assert false)
(check-sat)
(get-interpolants)